crates/graph/tests/compile-fail/01-assign-to-immutable.stderr
error: custom attribute panicked
 --> tests/compile-fail/01-assign-to-immutable.rs:3:1
  |
3 | #[workflow]
  | ^^^^^^^^^^^
  |
  = help: message: Cannot assign to immutable variable 'x'
